--- a/archives/toutiao-search/2024-02-22.md
+++ b/archives/toutiao-search/2024-02-22.md
@@ -1,55 +1,77 @@
 # 2024-02-22
 
-共 227 条
+共 244 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Feb 22 2024 17:00:39 GMT+0800 (China Standard Time) -->
-1. [广州沥心沙大桥事故已致2死3失联](https://so.toutiao.com/search?keyword=广州沥心沙大桥事故已致2死3失联)
-1. [大桥事故第一辆落水车辆被打捞](https://so.toutiao.com/search?keyword=大桥事故第一辆落水车辆被打捞)
-1. [新春消费 各有花“漾”](https://so.toutiao.com/search?keyword=新春消费+各有花“漾”)
-1. [直击广州被船撞断大桥现场情况](https://so.toutiao.com/search?keyword=直击广州被船撞断大桥现场情况)
+<!-- 最后更新时间 Thu Feb 22 2024 18:00:37 GMT+0800 (China Standard Time) -->
+1. [官方通报2.2亿彩票事件](https://so.toutiao.com/search?keyword=官方通报2.2亿彩票事件)
+1. [广州沥心沙大桥事故已致5死](https://so.toutiao.com/search?keyword=广州沥心沙大桥事故已致5死)
+1. [强寒潮来袭 全方位应对](https://so.toutiao.com/search?keyword=强寒潮来袭+全方位应对)
+1. [涉事船员操作失当引发大桥事故](https://so.toutiao.com/search?keyword=涉事船员操作失当引发大桥事故)
 1. [瓣瓣同心 心相连](https://so.toutiao.com/search?keyword=瓣瓣同心+心相连)
 1. [娃哈哈创始人宗庆后在ICU救治](https://so.toutiao.com/search?keyword=娃哈哈创始人宗庆后在ICU救治)
 1. [大桥被船撞击瞬间画面](https://so.toutiao.com/search?keyword=大桥被船撞击瞬间画面)
-1. [沪指七连阳逼近3000点](https://so.toutiao.com/search?keyword=沪指七连阳逼近3000点)
-1. [旅客坐飞机拍下贵州山火](https://so.toutiao.com/search?keyword=旅客坐飞机拍下贵州山火)
-1. [男子造谣“员工讲粤语遭罚款”被刑拘](https://so.toutiao.com/search?keyword=男子造谣“员工讲粤语遭罚款”被刑拘)
-1. [被撞断大桥去年刚完成加固](https://so.toutiao.com/search?keyword=被撞断大桥去年刚完成加固)
-1. [贵州省委原书记孙志刚被决定逮捕](https://so.toutiao.com/search?keyword=贵州省委原书记孙志刚被决定逮捕)
-1. [湖南180个收费站采取管制措施](https://so.toutiao.com/search?keyword=湖南180个收费站采取管制措施)
-1. [撞断大桥涉事船主被控制](https://so.toutiao.com/search?keyword=撞断大桥涉事船主被控制)
-1. [国民党主席朱立伦回应金门渔船事件](https://so.toutiao.com/search?keyword=国民党主席朱立伦回应金门渔船事件)
-1. [贵州多起山火肇事者被采取强制措施](https://so.toutiao.com/search?keyword=贵州多起山火肇事者被采取强制措施)
-1. [疑似坠下大桥公交车现场照片曝光](https://so.toutiao.com/search?keyword=疑似坠下大桥公交车现场照片曝光)
-1. [撞断大桥的船只上月刚被罚](https://so.toutiao.com/search?keyword=撞断大桥的船只上月刚被罚)
-1. [武汉路边车辆披“冰甲”](https://so.toutiao.com/search?keyword=武汉路边车辆披“冰甲”)
-1. [华为Pocket 2折叠屏手机发布](https://so.toutiao.com/search?keyword=华为Pocket+2折叠屏手机发布)
 1. [乘务员餐车吃饭被乘客怒怼](https://so.toutiao.com/search?keyword=乘务员餐车吃饭被乘客怒怼)
-1. [路面结冰狗狗爬不上坡扭头走了](https://so.toutiao.com/search?keyword=路面结冰狗狗爬不上坡扭头走了)
-1. [山东寿光15万个蔬菜大棚紧急除雪](https://so.toutiao.com/search?keyword=山东寿光15万个蔬菜大棚紧急除雪)
-1. [伊朗被曝已向俄提供400枚弹道导弹](https://so.toutiao.com/search?keyword=伊朗被曝已向俄提供400枚弹道导弹)
-1. [台湾人如何看待金门渔船事件](https://so.toutiao.com/search?keyword=台湾人如何看待金门渔船事件)
-1. [贵州老人坐在被山火烧毁屋子外痛哭](https://so.toutiao.com/search?keyword=贵州老人坐在被山火烧毁屋子外痛哭)
+1. [肖战机场怒斥代拍](https://so.toutiao.com/search?keyword=肖战机场怒斥代拍)
+1. [男子造谣“员工讲粤语遭罚款”被刑拘](https://so.toutiao.com/search?keyword=男子造谣“员工讲粤语遭罚款”被刑拘)
+1. [直击广州被船撞断大桥现场情况](https://so.toutiao.com/search?keyword=直击广州被船撞断大桥现场情况)
 1. [外甥正月理发舅舅去世 舅妈索赔](https://so.toutiao.com/search?keyword=外甥正月理发舅舅去世+舅妈索赔)
-1. [贾玲拳击私教是体育大学教授](https://so.toutiao.com/search?keyword=贾玲拳击私教是体育大学教授)
-1. [24岁妈妈确诊癌症崩溃：孩子才3岁](https://so.toutiao.com/search?keyword=24岁妈妈确诊癌症崩溃：孩子才3岁)
-1. [方正证券女员工被曝出轨男领导](https://so.toutiao.com/search?keyword=方正证券女员工被曝出轨男领导)
+1. [路面结冰狗狗爬不上坡扭头走了](https://so.toutiao.com/search?keyword=路面结冰狗狗爬不上坡扭头走了)
+1. [被撞断大桥去年刚完成加固](https://so.toutiao.com/search?keyword=被撞断大桥去年刚完成加固)
+1. [沥心沙大桥系三民岛出行主要通道](https://so.toutiao.com/search?keyword=沥心沙大桥系三民岛出行主要通道)
+1. [方正证券回应女员工与男领导通奸](https://so.toutiao.com/search?keyword=方正证券回应女员工与男领导通奸)
+1. [撞断大桥涉事船主被控制](https://so.toutiao.com/search?keyword=撞断大桥涉事船主被控制)
+1. [武汉不到3天气温从27℃降至0℃以下](https://so.toutiao.com/search?keyword=武汉不到3天气温从27℃降至0℃以下)
+1. [贵州省委原书记孙志刚被决定逮捕](https://so.toutiao.com/search?keyword=贵州省委原书记孙志刚被决定逮捕)
+1. [疑似坠下大桥公交车现场照片曝光](https://so.toutiao.com/search?keyword=疑似坠下大桥公交车现场照片曝光)
 1. [爸爸安慰因有根白发哭泣的妈妈](https://so.toutiao.com/search?keyword=爸爸安慰因有根白发哭泣的妈妈)
-1. [姚洋：女性50岁退休是不对的](https://so.toutiao.com/search?keyword=姚洋：女性50岁退休是不对的)
+1. [人民网评网红扮赵世子](https://so.toutiao.com/search?keyword=人民网评网红扮赵世子)
+1. [广州大桥肇事船为何不走中间主航道](https://so.toutiao.com/search?keyword=广州大桥肇事船为何不走中间主航道)
+1. [台湾人如何看待金门渔船事件](https://so.toutiao.com/search?keyword=台湾人如何看待金门渔船事件)
+1. [旅客坐飞机拍下贵州山火](https://so.toutiao.com/search?keyword=旅客坐飞机拍下贵州山火)
+1. [武汉部分列车停运](https://so.toutiao.com/search?keyword=武汉部分列车停运)
+1. [国民党主席朱立伦回应金门渔船事件](https://so.toutiao.com/search?keyword=国民党主席朱立伦回应金门渔船事件)
+1. [男子野外烤糍粑引发山火](https://so.toutiao.com/search?keyword=男子野外烤糍粑引发山火)
 1. [女子拍违章获奖1500被问钱烫手吗](https://so.toutiao.com/search?keyword=女子拍违章获奖1500被问钱烫手吗)
+1. [贵州多起山火肇事者被采取强制措施](https://so.toutiao.com/search?keyword=贵州多起山火肇事者被采取强制措施)
+1. [杭州又下雪了](https://so.toutiao.com/search?keyword=杭州又下雪了)
+1. [南来北往：乘“时代列车”奔向未来](https://so.toutiao.com/search?keyword=南来北往：乘“时代列车”奔向未来)
+1. [华为Pocket 2折叠屏手机发布](https://so.toutiao.com/search?keyword=华为Pocket+2折叠屏手机发布)
+1. [贾玲拳击私教是体育大学教授](https://so.toutiao.com/search?keyword=贾玲拳击私教是体育大学教授)
+1. [武汉路边车辆披“冰甲”](https://so.toutiao.com/search?keyword=武汉路边车辆披“冰甲”)
+1. [贵州老人坐在被山火烧毁屋子外痛哭](https://so.toutiao.com/search?keyword=贵州老人坐在被山火烧毁屋子外痛哭)
+1. [山东寿光15万个蔬菜大棚紧急除雪](https://so.toutiao.com/search?keyword=山东寿光15万个蔬菜大棚紧急除雪)
+1. [贾玲公开瘦身食谱](https://so.toutiao.com/search?keyword=贾玲公开瘦身食谱)
+1. [路面结冰女子“摸爬滚打”过马路](https://so.toutiao.com/search?keyword=路面结冰女子“摸爬滚打”过马路)
+1. [安徽省委书记调研“三只羊”](https://so.toutiao.com/search?keyword=安徽省委书记调研“三只羊”)
+1. [物业走了是好事吗](https://so.toutiao.com/search?keyword=物业走了是好事吗)
+1. [艾弗森：把我放现在场均能得43分](https://so.toutiao.com/search?keyword=艾弗森：把我放现在场均能得43分)
+1. [24岁妈妈确诊癌症崩溃：孩子才3岁](https://so.toutiao.com/search?keyword=24岁妈妈确诊癌症崩溃：孩子才3岁)
+1. [狗仔辟谣吴京患病](https://so.toutiao.com/search?keyword=狗仔辟谣吴京患病)
+1. [艾弗森评历史首发五人](https://so.toutiao.com/search?keyword=艾弗森评历史首发五人)
+1. [山西一男教师猥亵男生被行拘10天](https://so.toutiao.com/search?keyword=山西一男教师猥亵男生被行拘10天)
+1. [媒体人：江苏女篮主教练丁铁去世](https://so.toutiao.com/search?keyword=媒体人：江苏女篮主教练丁铁去世)
+1. [雪天车在高架打滑 随行车辆不敢催](https://so.toutiao.com/search?keyword=雪天车在高架打滑+随行车辆不敢催)
+1. [以军称打死数十名巴勒斯坦武装人员](https://so.toutiao.com/search?keyword=以军称打死数十名巴勒斯坦武装人员)
+1. [建川博物馆被要求免费合理吗](https://so.toutiao.com/search?keyword=建川博物馆被要求免费合理吗)
+1. [广州沥心沙大桥事故已致2死3失联](https://so.toutiao.com/search?keyword=广州沥心沙大桥事故已致2死3失联)
+1. [大桥事故第一辆落水车辆被打捞](https://so.toutiao.com/search?keyword=大桥事故第一辆落水车辆被打捞)
+1. [新春消费 各有花“漾”](https://so.toutiao.com/search?keyword=新春消费+各有花“漾”)
+1. [沪指七连阳逼近3000点](https://so.toutiao.com/search?keyword=沪指七连阳逼近3000点)
+1. [湖南180个收费站采取管制措施](https://so.toutiao.com/search?keyword=湖南180个收费站采取管制措施)
+1. [撞断大桥的船只上月刚被罚](https://so.toutiao.com/search?keyword=撞断大桥的船只上月刚被罚)
+1. [伊朗被曝已向俄提供400枚弹道导弹](https://so.toutiao.com/search?keyword=伊朗被曝已向俄提供400枚弹道导弹)
+1. [方正证券女员工被曝出轨男领导](https://so.toutiao.com/search?keyword=方正证券女员工被曝出轨男领导)
+1. [姚洋：女性50岁退休是不对的](https://so.toutiao.com/search?keyword=姚洋：女性50岁退休是不对的)
 1. [湖南10市州将出现雨凇或积雪](https://so.toutiao.com/search?keyword=湖南10市州将出现雨凇或积雪)
 1. [美将斥巨资更换港口中国制造起重机](https://so.toutiao.com/search?keyword=美将斥巨资更换港口中国制造起重机)
 1. [余承东：今秋鸿蒙性能或提升30%](https://so.toutiao.com/search?keyword=余承东：今秋鸿蒙性能或提升30%)
-1. [路面结冰女子“摸爬滚打”过马路](https://so.toutiao.com/search?keyword=路面结冰女子“摸爬滚打”过马路)
 1. [普京送给金正恩的俄产轿车什么来头](https://so.toutiao.com/search?keyword=普京送给金正恩的俄产轿车什么来头)
 1. [美国议员叫嚣干掉所有巴勒斯坦儿童](https://so.toutiao.com/search?keyword=美国议员叫嚣干掉所有巴勒斯坦儿童)
 1. [媒体人：希望足协帮泰山队调整赛程](https://so.toutiao.com/search?keyword=媒体人：希望足协帮泰山队调整赛程)
-1. [建川博物馆被要求免费合理吗](https://so.toutiao.com/search?keyword=建川博物馆被要求免费合理吗)
 1. [落马官员曾花1600余万买彩票](https://so.toutiao.com/search?keyword=落马官员曾花1600余万买彩票)
 1. [郑州一海洋馆潜水员馆内溺亡](https://so.toutiao.com/search?keyword=郑州一海洋馆潜水员馆内溺亡)
 1. [男子在大棚内用“火烤”巧除积雪](https://so.toutiao.com/search?keyword=男子在大棚内用“火烤”巧除积雪)
-1. [肖战机场怒斥代拍](https://so.toutiao.com/search?keyword=肖战机场怒斥代拍)
-1. [安徽省委书记调研“三只羊”](https://so.toutiao.com/search?keyword=安徽省委书记调研“三只羊”)
 1. [俞敏洪给黑龙江经济支了三招](https://so.toutiao.com/search?keyword=俞敏洪给黑龙江经济支了三招)
 1. [德转：足协排赛历已预留亚冠时间](https://so.toutiao.com/search?keyword=德转：足协排赛历已预留亚冠时间)
 1. [大铲子战队硬核清雪](https://so.toutiao.com/search?keyword=大铲子战队硬核清雪)
@@ -63,7 +85,6 @@
 1. [贵州8场山火处理10人 均为违规用火](https://so.toutiao.com/search?keyword=贵州8场山火处理10人+均为违规用火)
 1. [贵州山火各地消防人民群众前往支援](https://so.toutiao.com/search?keyword=贵州山火各地消防人民群众前往支援)
 1. [俄军苏-25被乌击中后坚持返航迫降](https://so.toutiao.com/search?keyword=俄军苏-25被乌击中后坚持返航迫降)
-1. [南来北往：乘“时代列车”奔向未来](https://so.toutiao.com/search?keyword=南来北往：乘“时代列车”奔向未来)
 1. [被撞沥心沙大桥暂无次生风险](https://so.toutiao.com/search?keyword=被撞沥心沙大桥暂无次生风险)
 1. [武汉市民一夜醒来发现自行车座结冰](https://so.toutiao.com/search?keyword=武汉市民一夜醒来发现自行车座结冰)
 1. [快递新规会导致快递员离职潮吗](https://so.toutiao.com/search?keyword=快递新规会导致快递员离职潮吗)
@@ -87,7 +108,6 @@
 1. [新能源汽车降价潮或来临](https://so.toutiao.com/search?keyword=新能源汽车降价潮或来临)
 1. [中国人四年存了58.24万亿元](https://so.toutiao.com/search?keyword=中国人四年存了58.24万亿元)
 1. [西门子能源高管怂恿对中国风电下手](https://so.toutiao.com/search?keyword=西门子能源高管怂恿对中国风电下手)
-1. [雪天车在高架打滑 随行车辆不敢催](https://so.toutiao.com/search?keyword=雪天车在高架打滑+随行车辆不敢催)
 1. [G20外长会开幕](https://so.toutiao.com/search?keyword=G20外长会开幕)
 1. [雪天车祸现场消防员救出被困女子](https://so.toutiao.com/search?keyword=雪天车祸现场消防员救出被困女子)
 1. [实探高合汽车总部/工厂](https://so.toutiao.com/search?keyword=实探高合汽车总部/工厂)
@@ -109,19 +129,16 @@
 1. [以军称摧毁哈马斯高级官员所用隧道](https://so.toutiao.com/search?keyword=以军称摧毁哈马斯高级官员所用隧道)
 1. [比亚迪降价开启“电比油低”新时代](https://so.toutiao.com/search?keyword=比亚迪降价开启“电比油低”新时代)
 1. [湖北一超市疑被雪压垮 收银员去世](https://so.toutiao.com/search?keyword=湖北一超市疑被雪压垮+收银员去世)
-1. [贾玲公开瘦身食谱](https://so.toutiao.com/search?keyword=贾玲公开瘦身食谱)
 1. [广州一大桥被船只撞断 一公交掉落](https://so.toutiao.com/search?keyword=广州一大桥被船只撞断+一公交掉落)
 1. [阿媒：梅西为国家队带来经济损失](https://so.toutiao.com/search?keyword=阿媒：梅西为国家队带来经济损失)
 1. [世粮署暂停向加沙北部运送援助物资](https://so.toutiao.com/search?keyword=世粮署暂停向加沙北部运送援助物资)
 1. [女生遇到心仪男生下车要微信](https://so.toutiao.com/search?keyword=女生遇到心仪男生下车要微信)
-1. [物业走了是好事吗](https://so.toutiao.com/search?keyword=物业走了是好事吗)
 1. [金门：双方船只碰撞致大陆渔船翻覆](https://so.toutiao.com/search?keyword=金门：双方船只碰撞致大陆渔船翻覆)
 1. [车辆打滑刹不住撞倒前方下车女子](https://so.toutiao.com/search?keyword=车辆打滑刹不住撞倒前方下车女子)
 1. [名嘴：两岸关系恶化倒霉的是台民众](https://so.toutiao.com/search?keyword=名嘴：两岸关系恶化倒霉的是台民众)
 1. [经济专家谈农民工福利待遇](https://so.toutiao.com/search?keyword=经济专家谈农民工福利待遇)
 1. [小丹顶鹤出车祸住院 病床上吃小鱼](https://so.toutiao.com/search?keyword=小丹顶鹤出车祸住院+病床上吃小鱼)
 1. [男子驾车撞上收费站致后排妻子死亡](https://so.toutiao.com/search?keyword=男子驾车撞上收费站致后排妻子死亡)
-1. [以军称打死数十名巴勒斯坦武装人员](https://so.toutiao.com/search?keyword=以军称打死数十名巴勒斯坦武装人员)
 1. [专家：渔船事件升高两岸敌意螺旋](https://so.toutiao.com/search?keyword=专家：渔船事件升高两岸敌意螺旋)
 1. [华为2月26日将首发华为通信大模型](https://so.toutiao.com/search?keyword=华为2月26日将首发华为通信大模型)
 1. [房贷利率快降到3%了要不要买房](https://so.toutiao.com/search?keyword=房贷利率快降到3%了要不要买房)
